# llm-zoomcamp

./: pyproject.toml  rag_cleaned.ipynb  rag_helper.py
agentic-rag/: .gitignore  agents.ipynb  notebook.ipynb  persinsent_rag.ipynb
agentic-rag/homework/: agentic-rag-homework.ipynb
homework/: rag_helper.py
vector-search/: .gitignore  rag_helper.py  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
vector-search/llm-zoomcamp-hw2/: vector_search_hm.ipynb
