[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
]
